Fixed spacing between meter gauges in gauge group.

--- a/app/assets/stylesheets/components/meterGauge.scss
+++ b/app/assets/stylesheets/components/meterGauge.scss
@@ -1,6 +1,4 @@
 .meterGauge.mod-small {
-  height: 135px;
-  width: 100px;
 }
 
 .meterGauge.mod-big {
